--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,10 @@
-Teste 1
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    TESTE
+</body>
+</html>
