--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,10 @@
-<html lang="pt">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Revisão Dev Sistemas</title>
 </head>
 <body>
-    TESTE
+    <h2>Aula de Revisão HTML</h2>
 </body>
 </html>
