--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Revisão Dev Sistemas</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css"/>
+    <script type="text/javascript" src="funcoes.js"></script>
 </head>
 <body>
     <h2>Aula de Revisão HTML</h2>
+    <script >
+
+    </script>
 </body>
 </html>
