--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,8 @@
     <script type="text/javascript" src="funcoes.js"></script>
 </head>
 <body>
-    <h2>Aula de Revisão HTML</h2>
-    <script >
-
-    </script>
+    <h2>Nome: Tiago dos Santos Oliveira</h2>
+    <h2>RA: 1901683</h2>
+  
 </body>
 </html>
